# auto-deploy

./: .travis.yml  Cargo.toml  Makefile  readme.md
example/: example.toml  missing_not_work.toml  missing_works.toml
old/: deploy-prod.sh  deploy-test.sh  local-deploy.sh  local-test.config  shutdown.sh  test.config
src/: config.rs  git.rs  main.rs  projects.rs  tools.rs
tests/: pom-with-no-final-name.xml  pom.xml
