[package]
name = "auto-deploy"
version = "0.1.0"
authors = ["zido"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
toml = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "1.0.101"
