[package]
name = "auto-deploy"
version = "0.1.0"
authors = ["zido"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
toml = "0.5.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "1.0.101"
git2 = "0.10.1"
url = "2.1.0"
java-properties="1.2.0"
yaml-rust = "0.4"
quick-xml = "0.17.0"
